--- a/Future Vision/contact.html
+++ b/Future Vision/contact.html
@@ -86,6 +86,19 @@
                 </ul>            
             </div>        
             <div class="tm-col-right tm-col-footer">
+
+                <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<body>
+
+<div class="icon-bar">
+  <a href="#" class="facebook"><i class="fa fa-facebook"></i></a> 
+  <a href="#" class="twitter"><i class="fa fa-twitter"></i></a> 
+  <a href="#" class="google"><i class="fa fa-google"></i></a> 
+  <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
+  <a href="#" class="youtube"><i class="fa fa-youtube"></i></a> 
+</div>
+
                 <footer class="tm-site-footer text-right">
                     <p class="mb-0">Copyright 2022 FutureVisionCo.
                 </footer>
