--- a/Future Vision/home.html
+++ b/Future Vision/home.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Services Page</title>
+    <title>Home page</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet" /> <!-- https://fonts.google.com/ -->
     <link href="css/bootstrap.min.css" rel="stylesheet" /> <!-- https://getbootstrap.com/ -->
     <link href="fontawesome/css/all.min.css" rel="stylesheet" /> <!-- https://fontawesome.com/ -->
@@ -34,14 +34,14 @@
                         </button>
                         <div class="collapse navbar-collapse tm-nav" id="navbar-nav">
                             <ul class="navbar-nav text-uppercase">
-                                <li class="nav-item">
-                                    <a class="nav-link tm-nav-link" href="home.html">Home</a>
+                                <li class="nav-item active">
+                                    <a class="nav-link tm-nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link tm-nav-link" href="about.html">About</a>
                                 </li>
-                                <li class="nav-item active">
-                                    <a class="nav-link tm-nav-link" href="website.html">Website <span class="sr-only">(current)</span></a>
+                                <li class="nav-item">
+                                    <a class="nav-link tm-nav-link" href="website.html">Website</a>
                                 </li>                            
                                 <li class="nav-item">
                                     <a class="nav-link tm-nav-link" href="contact.html">Contact</a>
@@ -56,28 +56,11 @@
                 <div class="tm-col-left"></div>
                 <main class="tm-col-right">
                     <section class="tm-content">
-                        <div class="media my-3 mb-5 tm-service-media tm-service-media-img-l">
-                            <img src="img/services-1.jpg" alt="Image" class="tm-service-img">
-                            <div class="media-body tm-service-text">
-                                <h2 class="mb-4 tm-content-title">Best website for you</h2>
-                                <p>Our website is modernistic and easy to navigate! The colorpallete used can be seen to on the picture to the left.</p>
-                            </div> 
-                        </div>
-                        <div class="media my-3 mb-5 tm-service-media">                            
-                            <div class="media-body tm-service-text">
-                                <h2 class="mb-4 tm-content-title">Customer Satisfaction</h2>
-                                <p>Feel free to contact Noel Persson Ferrera for any kind of question. You can do this in the contact tab, or by sending an email to: noel.persson-ferrera.tk21@amerikanskagymnasiet.se</p>
-                            </div> 
-                            <img src="img/services-2.jpg" alt="Image" class="tm-service-img-r">
-                        </div>
-                        <div class="media my-3 tm-service-media tm-service-media-img-l">
-                            <img src="img/services-3.jpg" alt="Image" class="tm-service-img">
-                            <div class="media-body tm-service-text">
-                                <h2 class="mb-4 tm-content-title">Imported code</h2>
-                                <p>The only imported code for this website is for the contact page, when making the website I did not know how to do that.</p>
-                                <p>I have however also used bootstrap and jquery to make the task a lot easier, jquery dramatically cuts the use of javascript down while bootstrap makes the  styling process easier.</p>
-                            </div> 
-                        </div>                      
+                        <h2 class="mb-5 tm-content-title">Future Vision</h2>
+                        <p class="mb-5">We are the management company you never heard of. We provide help and guidence to anyone who seeks it, that be it celebrities, bussinessmen or just normal people.</p>
+                        <hr class="mb-5">
+                        <p class="mb-5">If you are interested, you can learn more about us in the "ABOUT" Tab, or by pressing continue.</p>                        
+                        <a href="about.html" class="btn btn-primary">Continue...</a>
                     </section>
                 </main>
             </div>
@@ -93,10 +76,10 @@
             </div>        
             <div class="tm-col-right tm-col-footer">
                 <footer class="tm-site-footer text-right">
-                    <p class="mb-0">Copyright 2022 FutureVisionCo. 
+                    <p class="mb-0">Copyright 2022 FutureVisionCo.
                 </footer>
             </div>  
-        </div>        
+        </div>
 
         <!-- Diagonal background design -->
         <div class="tm-bg">
@@ -110,5 +93,4 @@
     <script src="js/jquery.backstretch.min.js"></script>
     <script src="js/script.js"></script>
 </body>
-
 </html>
